lux-lib/src/lockfile/snapshots/lux_lib__lockfile__tests__parse_lockfile.snap
---
source: lux-lib/src/lockfile/mod.rs
assertion_line: 1245
expression: lockfile
---
{
  "version": "1.0.0",
  "rocks": {
    "04bfd5b08a74ba37c05241ef51d7afc47e1f3379c872dca34d99031b1ea7b855": {
      "name": "neorg",
      "version": "8.0.0-1",
      "pinned": false,
      "dependencies": [
        "99930d308895ccd027772f32eb777cebdb8668c32f4602036e237f0a46fcc0d9",
        "985b1994517e6433d3e9ed05882a13069e7458f4646eabb451cc3964674c3c11"
      ],
      "constraint": "=8.0.0",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neorg/neorg/archive/v8.0.0.zip"
      },
      "hashes": {
        "rockspec": "sha256-7FQ1jtFfZQQ9IYtLwS14TcFsTWXM4xMnnpQh80GHpP0=",
        "source": "sha256-YRQaq7LRoIK6qrc1djC/z4aPVhdcuw1IKxsZuddJKu4="
      }
    },
    "085d597b2652e6dd9793a12fc57fca6d63575201113ba0bfe197f941264eb83f": {
      "name": "say",
      "version": "1.4.1-3",
      "pinned": false,
      "dependencies": [],
      "constraint": ">=1.4.0",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "git",
        "url": "https://github.com/lunarmodules/say.git",
        "ref": "v1.4.1"
      },
      "hashes": {
        "rockspec": "sha256-WFKt1iWeyjO9A8SG0KUX8tkS9JvMqoVM8CKBUguuK0Y=",
        "source": "sha256-IjNkK1leVtYgbEjUqguVMjbdW+0BHAOCE0pazrVuF50="
      }
    },
    "306b1bc37b09349a902e436efffb1161bbbdb46fafd5dc54b6e071ef5259b68a": {
      "name": "nvim-nio",
      "version": "1.10.1-1",
      "pinned": false,
      "dependencies": [],
      "constraint": ">=1.8.0",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neotest/nvim-nio/archive/21f5324bfac14e22ba26553caf69ec76ae8a7662.zip"
      },
      "hashes": {
        "rockspec": "sha256-QL5OCZFBGixecdEoriGck4iG83tjM09ewYbWVSbcfa4=",
        "source": "sha256-5x+iHduNdyVjS6+OrqfDh17g9o2tP2YFFqKEsK6Z5zw="
      }
    },
    "735d981050a43b2a36eb5621968fee7e6962ac1f673c9244a18039bf28594316": {
      "name": "luassert",
      "version": "1.9.0-1",
      "pinned": false,
      "dependencies": [
        "085d597b2652e6dd9793a12fc57fca6d63575201113ba0bfe197f941264eb83f"
      ],
      "constraint": null,
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "git",
        "url": "https://github.com/lunarmodules/luassert.git",
        "ref": "v1.9.0"
      },
      "hashes": {
        "rockspec": "sha256-rTPvF/GK/jMnH/q4wbwTCGBFELWh+JcvHeOCFAbIf64=",
        "source": "sha256-jjdB95Vr5iVsh5T7E84WwZMW6/5H2k2R/ny2VBs2l3I="
      }
    },
    "77a8e249ed3119392da5a9f20c88954cacf7ac6d2ccb7b78e037a218c6afc166": {
      "name": "nvim-nio",
      "version": "1.7.0-1",
      "pinned": false,
      "dependencies": [],
      "constraint": ">=1.7.0, <1.8.0",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neotest/nvim-nio/archive/v1.7.0.zip"
      },
      "hashes": {
        "rockspec": "sha256-BeisoicovxazR188FBSEKxr5FBrxpIL0Ss+vCdCQ1Aw=",
        "source": "sha256-xuO1/iMXJnyKI8DkQO80TCTKMYmqOmc/bhlb9pDx6dY="
      }
    },
    "985b1994517e6433d3e9ed05882a13069e7458f4646eabb451cc3964674c3c11": {
      "name": "lua-utils.nvim",
      "version": "1.0.2-1",
      "pinned": false,
      "dependencies": [],
      "constraint": null,
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neorg/lua-utils.nvim/archive/v1.0.2.zip"
      },
      "hashes": {
        "rockspec": "sha256-Kc8mdjLRaL063VWYjGAWSYySYKmFgZXF+Qoa0TaRIWg=",
        "source": "sha256-fpGplQuldzNCYUMISOfGKgD080JKDxbZNb8Rch00Yxs="
      }
    },
    "99930d308895ccd027772f32eb777cebdb8668c32f4602036e237f0a46fcc0d9": {
      "name": "nvim-nio",
      "version": "1.10.1-1",
      "pinned": false,
      "dependencies": [],
      "constraint": null,
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neotest/nvim-nio/archive/21f5324bfac14e22ba26553caf69ec76ae8a7662.zip"
      },
      "hashes": {
        "rockspec": "sha256-QL5OCZFBGixecdEoriGck4iG83tjM09ewYbWVSbcfa4=",
        "source": "sha256-5x+iHduNdyVjS6+OrqfDh17g9o2tP2YFFqKEsK6Z5zw="
      }
    },
    "aa8d78a5981bc7a1a0ab12216849259a68e41c4203d495051ab57c24074f63f8": {
      "name": "pathlib.nvim",
      "version": "2.2.3-1",
      "pinned": false,
      "dependencies": [
        "306b1bc37b09349a902e436efffb1161bbbdb46fafd5dc54b6e071ef5259b68a"
      ],
      "constraint": ">=2.2.0, <2.3.0",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/pysan3/pathlib.nvim/archive/v2.2.3.zip"
      },
      "hashes": {
        "rockspec": "sha256-kdDMqznWlwP9wIqlzPrZ5qEDp6edhlkaasAcQzWTmmM=",
        "source": "sha256-fNO24tL8wApI8j3rk2mdLf5wbbjlUzsvCxki3n0xRw8="
      }
    },
    "b171325ee5f129f7561a01d258ba38164d141e7cfddbf3c740edb28dd848ca2f": {
      "name": "nui.nvim",
      "version": "0.3.0-1",
      "pinned": false,
      "dependencies": [],
      "constraint": "=0.3.0",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "git",
        "url": "https://github.com/MunifTanjim/nui.nvim.git",
        "ref": "0.3.0"
      },
      "hashes": {
        "rockspec": "sha256-C33kdZVqHui1mOd+J2/HbvmvYOntTMzfJ3YBtj4v51k=",
        "source": "sha256-L0ebXtv794357HOAgT17xlEJsmpqIHGqGlYfDB20WTo="
      }
    },
    "b49da3f0e8cc9fd87681b92011f04fbe1d9acedcdb1bae652040e5c16d33be29": {
      "name": "plenary.nvim",
      "version": "0.1.4-1",
      "pinned": false,
      "dependencies": [
        "735d981050a43b2a36eb5621968fee7e6962ac1f673c9244a18039bf28594316"
      ],
      "constraint": "=0.1.4",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-lua/plenary.nvim/archive/v0.1.4.zip"
      },
      "hashes": {
        "rockspec": "sha256-0EdepFBCsLc5D7HJKX66yMw/NbIgCmQib/+yqpJ9FFE=",
        "source": "sha256-cJ2EfkbTOiEJ8IPVnoO77alXynBv+nJ2ql/vfYOTSJI="
      }
    },
    "bf813f9f333f9efc8108b86386ea8a2a7aeaff1d5cdf470449d5e5242e3794d3": {
      "name": "neorg",
      "version": "8.8.1-1",
      "pinned": false,
      "dependencies": [
        "77a8e249ed3119392da5a9f20c88954cacf7ac6d2ccb7b78e037a218c6afc166",
        "fb56666f3cfc66910e00c89bcfa81361660a0a4edfd528baadbedcd4ac89390a",
        "b49da3f0e8cc9fd87681b92011f04fbe1d9acedcdb1bae652040e5c16d33be29",
        "b171325ee5f129f7561a01d258ba38164d141e7cfddbf3c740edb28dd848ca2f",
        "aa8d78a5981bc7a1a0ab12216849259a68e41c4203d495051ab57c24074f63f8"
      ],
      "constraint": "=8.8.1",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neorg/neorg/archive/v8.8.1.zip"
      },
      "hashes": {
        "rockspec": "sha256-fjnKNY8OIDpq2eZYea3v/uM4vna4OxpO+IA0LCcN+Cc=",
        "source": "sha256-0sVLXN+aDxmb2lxvhjUGgg8XFyu8DMl2i2RA+TjUbu8="
      }
    },
    "e7c4c9fcd3cb6fe33c1c0a2ab8cdbbe8ee81d11334277d1f5631c80317770769": {
      "name": "lua-cjson",
      "version": "2.1.0-1",
      "pinned": false,
      "dependencies": [],
      "constraint": null,
      "binaries": [
        "lua2json",
        "json2lua"
      ],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://luarocks.org/lua-cjson-2.1.0-1.src.rock"
      },
      "hashes": {
        "rockspec": "sha256-L/6Yon2ek6NnEeifAy3qsnT2cMCB8IdaCgVeu3+1lvs=",
        "source": "sha256-23r4ScVV0aR09yn+Sla1Uw6b57JHSet6fEdKfHIHuXI="
      }
    },
    "f98575efb520794ce8828bf0f5088047e745c27cd102cde14d4f6ad933efa00d": {
      "name": "say",
      "version": "1.4.1-3",
      "pinned": false,
      "dependencies": [],
      "constraint": null,
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "git",
        "url": "https://github.com/lunarmodules/say.git",
        "ref": "v1.4.1"
      },
      "hashes": {
        "rockspec": "sha256-WFKt1iWeyjO9A8SG0KUX8tkS9JvMqoVM8CKBUguuK0Y=",
        "source": "sha256-IjNkK1leVtYgbEjUqguVMjbdW+0BHAOCE0pazrVuF50="
      }
    },
    "fb56666f3cfc66910e00c89bcfa81361660a0a4edfd528baadbedcd4ac89390a": {
      "name": "lua-utils.nvim",
      "version": "1.0.2-1",
      "pinned": false,
      "dependencies": [],
      "constraint": "=1.0.2",
      "binaries": [],
      "source": "luarocks_rockspec+https://luarocks.org/",
      "source_url": {
        "type": "url",
        "url": "https://github.com/nvim-neorg/lua-utils.nvim/archive/v1.0.2.zip"
      },
      "hashes": {
        "rockspec": "sha256-Kc8mdjLRaL063VWYjGAWSYySYKmFgZXF+Qoa0TaRIWg=",
        "source": "sha256-fpGplQuldzNCYUMISOfGKgD080JKDxbZNb8Rch00Yxs="
      }
    }
  },
  "entrypoints": [
    "04bfd5b08a74ba37c05241ef51d7afc47e1f3379c872dca34d99031b1ea7b855",
    "bf813f9f333f9efc8108b86386ea8a2a7aeaff1d5cdf470449d5e5242e3794d3",
    "e7c4c9fcd3cb6fe33c1c0a2ab8cdbbe8ee81d11334277d1f5631c80317770769",
    "f98575efb520794ce8828bf0f5088047e745c27cd102cde14d4f6ad933efa00d"
  ]
}
